# yes-automatic

./: .envrc  .gitignore  CHANGELOG.md  README.md  eslint.config.ts  package.json  release.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/lua/: instance.rs  manager.rs  mod.rs  model.rs
