[package]
name = "yes-automatic"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yes_automatic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam = "0.8.4"
device_query = "3.0.1"
enigo = { version = "0.3.0", features = ["serde"] }
mlua = { version = "0.10.3", features = ["async", "luau", "send", "vendored"] }
strum = { version = "0.27.1", features = ["derive"] }
anyhow = "1.0.98"
taurpc = "0.5.0"
specta = { version = "2.0.0-rc.22", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
resolve-path = "0.1.0"
thiserror = "2.0.12"
tauri-plugin-notification = "2.2.2"
tauri-plugin-dialog = "2.2.2"
